# miru

./: .gitignore  Cargo.toml  README.md
src/: app.rs  archive.rs  compression.rs  config.rs  error.rs  image_cache.rs  main.rs  notify.rs
src/metadata/: mal.rs  mal_sync.rs  mod.rs
src/nyaa/: mod.rs  smart_search.rs
src/player/: ipc.rs  mod.rs  mpv.rs
src/rpc/: mod.rs
src/torrent/: mod.rs  preview.rs  qbittorrent.rs  transmission.rs
src/ui/: downloads.rs  episodes.rs  library.rs  mod.rs  search.rs  widgets.rs
